<resources>
    <string name="app_name">Take a Note</string>
    <string name="movie_tab">Movies</string>
    <string name="tv_tab">TV</string>
    <string name="music_tab" >Music</string>
    <string name="main_navigation">More Info</string>
    <string name="gallery">gallery</string>
    <string name="slideshow">slideshow</string>
    <string name="tools">tools</string>
    <string name="imports">import</string>
    <string name="home_tab">Home</string>
    <string name="notes">Notes</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="backlog">Backlog</string>
    <string name="drawer_header_text">Notes in Library: </string>
    <string name="theme">Theme</string>
    <string name="note_edit">Note Edit</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="take_a_note">Take a Note</string>
    <string name="title_note_add_hint">Title</string>
    <string name="music_category">Album</string>
    <string name="tv_category">TV Show</string>
    <string name="movie_category">Movie</string>
    <string name="drawer_name_text">%s</string>
    <string name="drawer_header_secondary_text">%d</string>
    <string name="director_input">Director</string>
    <string name="date_input">Release Year</string>
    <string name="fill_message">Please Fill in All fields!</string>
    <string name="thumbnail">thumbnail</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="artist">Artist</string>
    <string name="mark_as_favorite">Mark as Favorite</string>
    <string name="season_number">Season</string>
    <string name="post">POST</string>
    <string name="enter_note">Enter note</string>
    <string name="string_placeholder">%s</string>
    <string name="image_add">image add</string>
    <string name="season">Season: %d</string>
    <string name="rearrange_button">rearrange button</string>
    <string name="clear_image">clear image</string>
    <string name="theme_button">theme button</string>
    <string name="info_button">info button</string>
    <string name="about_title">Version: %s</string>
    <string name="about_message">Copyright 2018. Cody Masao</string>
    <string-array name="category_array">
        <item>@string/movie_category</item>
        <item>@string/tv_category</item>
        <!--<item>@string/music_category</item>-->
    </string-array>

</resources>
