<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_favories"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_backlog"
            android:icon="@drawable/ic_backlog"
            android:title="@string/backlog" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/tools" />
        <item
            android:id="@+id/app_bar_switch"
            android:checkable="false"
            android:checked="false"
            android:enabled="false"
            android:title="@string/theme"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
    </group>

</menu>