<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/popup_favorite"
            android:checkable="false"
            android:icon="@drawable/ic_mark_as_favorite"
            android:title="@string/mark_as_favorite" />
        <item
            android:id="@+id/popup_edit"
            android:checkable="false"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit" />
        <item
            android:id="@+id/popup_share"
            android:checkable="false"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            app:actionProviderClass="android.widget.ShareActionProvider"
            app:showAsAction="always"/>
        <item
            android:id="@+id/popup_delete"
            android:checkable="false"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete" />


    </group>

</menu>